fix copy of local messages to other local folders when messages were originally moved by pop3 incoming mail filters, r=standard8, bug 736539